# amplify-stateful-microservice

./: .gitignore  README.md  pyproject.toml
amplify_microservice/: __init__.py  _optional.py  apache_conf.py  api.py  config.py  jobs.py  models.py  output_writers.py  processor.py  worker.py
client/: README.md  pyproject.toml
client/examples/: async_example.py  basic_usage.py  upload_bin.py
client/ifcb_client/: __init__.py  async_client.py  client.py  exceptions.py  models.py  utils.py
examples/: __init__.py
examples/ifcb_features_service/: .env.example  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  processor.py
examples/image_format_conversion_service/: Dockerfile  README.md  __init__.py  main.py  processor.py
fastapi-uvicorn/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
fastapi-uvicorn/app/: main.py  models.py  services.py
fastapi-uvicorn/base/: README.md  pyproject.toml
fastapi-uvicorn/base/ifcb_microservice/: __init__.py  api.py  ingest.py  jobs.py  models.py  output_writers.py  processor.py  storage.py  worker.py
fastapi-uvicorn/services/features/: Dockerfile  README.md  pyproject.toml
fastapi-uvicorn/services/features/app/: __init__.py  processor.py
ifcb_microservice/: __init__.py  api.py  direct.py  output_writers.py  processor.py
stateful_microservice/: __init__.py  _optional.py  apache_conf.py  api.py  config.py  ingest.py  jobs.py  models.py  output_writers.py  processor.py  storage.py  worker.py
