[project]
name = "ifcb-features-microservice"
version = "1.0.0"
description = "Reusable IFCB microservice framework, features service example, and Python client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "boto3>=1.35.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "pillow>=11.0.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
client = [
    "httpx>=0.27.0",
    "boto3>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "ifcb_microservice",
    "client/ifcb_client",
    "examples/ifcb_features_service",
    "examples/image_format_conversion_service",
]
