[project]
name = "fastapi-uvicorn"
version = "0.1.0"
description = "FastAPI microservice for IFCB features extraction"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyifcb @ git+https://github.com/joefutrelle/pyifcb@v1.2.1",
]
