[project]
name = "ifcb-features-service"
version = "1.0.0"
description = "IFCB features extraction microservice"
requires-python = ">=3.12"
dependencies = [
    "ifcb-microservice-base",
    # Algorithm-specific dependencies
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
